--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 # ATLAS_URI=mongodb+srv://MongoDbName:Password@cluster0.wy3vt6o.mongodb.net/?retryWrites=true&w=majority
 
-# ATLAS_URI=mongodb://localhost:27017
+URI=mongodb://0.0.0.0:27017/abc
